@@ -1,3 +1,8 @@
+2005-10-14  Sam Steingold  <sds@gnu.org>
+
+	* spvw_sigwinch.d (update_linelength) [HAVE_READLINE]:
+	call rl_resize_terminal()
+
 2005-10-15  Sam Steingold  <sds@gnu.org>
 
 	* modules/clx/new-clx/clx.f (CHANGE-KEYBOARD-CONTROL): implemented
